--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "jws": "^3.2.2",
-    "mocha": "^6.2.3",
-    "should": "^7.1.0"
+    "jws": "4.0.0",
+    "mocha": "10.4.0",
+    "should": "13.2.3"
   },
   "dependencies": {
-    "axios": "^0.25.0",
+    "axios": "1.6.8",
     "passport-oauth": "^1.0.0",
-    "passport-oauth2": "^1.6.0"
+    "passport-oauth2": "^1.8.0"
   }
 }
